@@ -1,8 +1,9 @@
+Sep 05 2002  2.5.2  Fixed client scrolling
+Sep 04 2002  2.5.2  Fixed killing server on exit glitch
+                    Added client sorting
 Sep 03 2002  2.5.2  Initial client display panel ('c').  Lots left to be done.
                     Updated docs for client
                     Fixed client signal decay
-                    Fixed killing server on exit glitch
-                    Added client sorting
 Sep 01 2002  2.5.2  Details no longer prints gps twice for single networks.
 Aug 31 2002  2.5.2  Merged patch from poptix for gpsmap to support terraserver
                      images and to copy support for the new mapblast maps from
